--- a/static/stat662/hw_stat662.Rmd
+++ b/static/stat662/hw_stat662.Rmd
@@ -866,9 +866,7 @@ Given the rest of the variables, $x_j=n-\sum_{i\neq j}x_i$ is a constant, all th
 I simulate a multinomial data $(n=50,p_1=0.1,,p_1=0.2,p_1=0.3,p_1=0.4)$ data set. $x_{1:4}=(9,27,28,36)$ and put it into a Gibbs sampler. The result shows the estimated parameters will not change with iterations. It confirm that Gibbs sampling doesn't work for this case.
 
 
-
-
-<!--
+- Practice
 
 $$(p_{j}|p_{1:(j-1)},p_{(j+1):k},x_{1:k})\sim \frac{n}{\exp(-p_j)}\cdot Poisson(p_j)$$
 
@@ -1025,7 +1023,7 @@ ggplot(Gibbs, aes(y=theta, x = type, fill=type)) + geom_violin() +
   scale_fill_manual(values=c('#0057e7', '#008744', '#ff9933','#d62d20'))
 ```
 
--->
+
 
 2. Reconsider the example with the pump failures at the nuclear plants. Write your own program to carry out the Gibbs sampling algorithm for the double gamma prior, and report the posterior estimates and 95% Bayesian percentile confidence intervals. Discuss the simulation in detail.
 
