--- a/static/stat501/note_stat501.Rmd
+++ b/static/stat501/note_stat501.Rmd
@@ -21,7 +21,7 @@ options(repos="https://cran.rstudio.com")
 options(scipen=6)
 options(digits=4)
 if (!require(pacman)) {install.packages("pacman"); library(pacman)}
-p_load(stargazer, pscl, mvtnorm, MASS, ggplot2,tidyverse,mlogit,robcbi,kableExtra,truncnorm,lme4) # likelihoodAsy
+p_load(stargazer, pscl, mvtnorm, MASS, ggplot2,tidyverse,mlogit,BayesLogit,robcbi,kableExtra,truncnorm,lme4) # likelihoodAsy
 ```
 
 
@@ -602,4 +602,36 @@ predict(z.probit, newdat, type="response")
 
 ## (Polson etal, 2013)
 
-Nicholas G. Polson, James G. Scott & Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, DOI: 10.1080/01621459.2013.829001
+Nicholas G. Polson, James G. Scott & Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, [DOI: 10.1080/01621459.2013.829001](https://www-tandfonline-com/doi/full/10.1080/01621459.2013.829001)
+
+### Introduction
+
+[Home page of James Scott](https://jgscott.github.io/)
+
+[R package BayesLogit and Thesis](https://github.com/jwindle/BayesLogit)
+
+*Definition 1*. A random variable X has a Pólya–Gamma distribution with parameters b > 0 and , denoted as $X\sim PG(b, c),$ if
+
+where the $g_k ∼ Ga(b, 1)$ are independent gamma random variables, and where  indicates equality in distribution.
+
+
+### 2 The Polya-Gamma distribution
+
+### 3 A data-augmentation strategy
+
+A data-augmentation scheme for binomial likelihoods
+
+### 4 Simulating Polya-Gamma random Variables
+
+a method for simulating from the Pólya–Gamma distribution, which we have implemented as a stand-alone sampler in the BayesLogit R package.
+
+### 5 Experiment
+
+presents the results of an extensive benchmarking study comparing the efficiency of our method to other data-augmentation schemes. 
+
+### 6 Discussion
+
+concludes with a discussion of some open issues related to our proposal.
+
+
+
